terraform/azurerm/network/network_interface.tf
# fails
# Ensure that Network Interfaces disable IP forwardingCheckov CKV_AZURE_118
resource "azurerm_network_interface" "fail" {
  name                = "example-nic"
  location            = azurerm_resource_group.example.location
  resource_group_name = azurerm_resource_group.example.name

  ip_configuration {
    name                          = "internal"
    subnet_id                     = azurerm_subnet.example.id
    private_ip_address_allocation = "Dynamic"
  }

  enable_ip_forwarding = true
}
